--- a/www/templates/4steps_setup.html
+++ b/www/templates/4steps_setup.html
@@ -6,13 +6,14 @@
        <h2><img src="img/steps-icon-small.png" class="cycles-icon" />&nbsp;The Four Steps</h2>
         <div class="padding">
             <p>When you get in a place of pain or stress, use the following 4 Steps to build new pathways in your brain that lead to different reactions. It’s important to say the steps out loud to your spouse. Verbalizing your 4 Steps moves you from the emotional part of your brain (amygdala) to the thinking part of your brain (prefrontal cortex), where you have the ability to choose a different response.</p> 
-            <p>HELPFUL HINT:</p>
+            <h5>HELPFUL HINT:</h5 >
             <p>Your Pain Cycle will remind you of your typical feelings and ways of reacting when you’re in pain (Steps 1 and 2). Your Peace Cycle will remind you of your typical truths and new actions (Steps 3 and 4).</p>
             <button ui-sref="menu.tabs.cycles" class="button button-block button-calm">Review your Pain/Peace Cycle</button>
-		</div>
-        <ul class="steps-list list">
+        <br><p class="small-button-text">(Important: don’t add to this statement; adding a  “because you…” will only start another argument)</p>
+        </div>
+            <ul class="steps-list list">
                 <li class="item">
-                  <span class="circle-number">1</span>SAY WHAT YOU FEEL<br><span class="small-button-text">(Important: don’t add to this statement; adding a  “because you…” will only start another argument)</span>
+                  <span class="circle-number">1</span>SAY WHAT YOU FEEL<br>
                 </li>
                 <li class="item">
                   <span class="circle-number">2</span>SAY WHAT YOU NORMALLY DO
