--- a/www/templates/cycles.html
+++ b/www/templates/cycles.html
@@ -9,7 +9,7 @@
 		</a>
 		<img ng-if="user.User.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.User.id+'.jpg'}}" width="100%">
         <div class="padding">
-            <p>While some days in your relationship are filled with peace and joy, there are inevitability days when it’s just the opposite between you two. It’s been proven that how you and your spouse handle conflict together is a key factor in the health and sustainability of your relationship. Discover not only what’s happening when you fight, but also a clear pathway out of conflict. </p>
+            <p>While some days in your relationship are filled with peace and joy, there are inevitability days when it’s just the opposite between the two of you. It’s been proven that how you and your spouse handle conflict together is a key factor in the health and sustainability of your relationship. Discover not only what’s happening when you fight, but also a clear pathway out of conflict. </p>
             <button ui-sref="menu.tabs.cycles_pain" class="button button-block button-calm">Discover Your Pain Cycle</button>
             <button ui-sref="menu.tabs.cycles_peace" class="button button-block button-calm">Discover Your Peace Cycle</button>
 		</div>
