--- a/www/templates/cycles_pain_results.html
+++ b/www/templates/cycles_pain_results.html
@@ -12,7 +12,7 @@
 					<img src="img/top-left-arrow.svg" class="top-left-arrow" width="100%" />
 				</div>
 				<div class="top-middle">
-					<h5>My Feels</h5>###Answer One
+					<h5>You Feel</h5>###Answer One
 					<br>###Answer Two
 					<br>###Answer Three</div>
 				<div class="top-right">
@@ -24,7 +24,7 @@
 					<br>###Answer Three</div>
 				<div class="middle-middle"></div>
 				<div class="middle-right">
-					<h5>My Copes</h5>###Answer One
+					<h5>You Cope</h5>###Answer One
 					<br>###Answer Two
 					<br>###Answer Three</div>
 				<div class="bottom-left">
