--- a/www/templates/cycles_peace.html
+++ b/www/templates/cycles_peace.html
@@ -10,7 +10,7 @@
             • Spiritual resources, and <br>
             • The messages you believe about yourself.<br>
         </p>
-        <p>In creating your Peace Cycle choose truths that answer the feelings/negative messages in your pain cycle. The truth about me is I am (choose up to three):</p></div>
+        <p>In creating your Peace Cycle choose truths that replace the feelings/negative messages in your pain cycle. The truth about me is I am (choose three):</p></div>
         <div class="padding">
             <form name="cyclesPeaceForm" novalidate="" ng-submit="process('menu.tabs.cycles_peace_response',cyclesPeaceForm)">
              <ul class="cycles-peace list">
@@ -34,9 +34,9 @@
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                    <input type="checkbox" name="Can Control Self" value="Can Control Self" ng-model="cycles.peace.CanControlSelf">
+                    <input type="checkbox" name="Able to Control Self" value="AbleToControlSelf" ng-model="cycles.peace.AbleToControlSelf">
                     </label>
-                    Can Control Self
+                    Able to Control Self
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
@@ -58,27 +58,21 @@
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                    <input type="checkbox" name="belonging" value="belonging" ng-model="cycles.peace.belonging">
-                    </label>
-                    Belonging
-                </li>
-                <li class="item item-checkbox">
-                    <label class="checkbox">
                     <input type="checkbox" name="priceless" value="priceless" ng-model="cycles.peace.priceless">
                     </label>
                     Priceless
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                    <input type="checkbox" name="Full of Worth" value="Full of Worth" ng-model="cycles.peace.FullOfWorth">
+                    <input type="checkbox" name="Full of Worth" value="FullOfWorth" ng-model="cycles.peace.FullOfWorth">
                     </label>
                     Full of Worth
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                    <input type="checkbox" name="promising" value="promising" ng-model="cycles.peace.promising">
+                    <input type="checkbox" name="promising" value="FullOfPromise" ng-model="cycles.peace.FullOfPromise">
                     </label>
-                    Promising
+                    Full of Promise
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
@@ -136,7 +130,7 @@
                 </li>
             </ul>
             <div class="tip-text">
-                <p>REFLECT A SEC:</p>
+                <h1><img src="img/icon-reflect-small.png" class="cycles-icon" />&nbsp;REFLECT A SEC:</h1>
                 <p>How do you know the words you have selected are true? Can you confirm the truths through your relationship with God or with others? Most importantly, can you claim them for yourself?</p>
             </div>
             <input type="submit" value="Save and Continue" class="button button-block button-positive" />
