--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -9,7 +9,7 @@
             <div class="cycles-results">
                 <div class="top-left"><img src="img/top-left-arrow.svg" class="top-left-arrow" width="100%" /></div>
                 <div class="top-middle">                
-                    <h5>My Truths</h5>
+                    <h5>Your Truths</h5>
                     ###Answer One<br>
                     ###Answer Two<br>
                     ###Answer Three
@@ -23,7 +23,7 @@
                 </div>
                 <div class="middle-middle"></div>
                 <div class="middle-right">                
-                    <h5>My Actions</h5>
+                    <h5>Your Actions</h5>
                     ###Answer One<br>
                     ###Answer Two<br>
                     ###Answer Three
