--- a/www/templates/decisions_create.html
+++ b/www/templates/decisions_create.html
@@ -18,7 +18,7 @@
 		</div>
          <div class="grey_bg">
             <div class="padding">
-                <p>Brainstorm six possible options to the decision. It is important to be creative and think outside the box. Six options are so much better than two. .</p>
+                <p>Brainstorm six possible solutions to the decision. It is important to be creative and think outside the box. Six options are so much better than two. .</p>
                 <div class="list list-inset">
                     <label class="item item-input">
                     1&nbsp;
@@ -55,6 +55,7 @@
                     <input name="gift" type="text" value="decision6" ng-model="decisions.decision6" />				
                     </label>
                 </div>
+                <p>Take the time: Pray together</p>
             </div>
          </div>
              <div class="list list-inset">
@@ -64,9 +65,9 @@
               </label>
             </div>
             <div class="padding">
-            <p>HINT:</p>
+            <h5>HINT:</h5>
             <p>An Us decision does not include the thought, “okay, we will do it your way this time.” You must decide together.</p>
-            <p>Choose a date in the future to reevaluate your choice. Your MarriageStrong app will remind you on this date to rethink your decision.</p>
+            <p><img src="img/icon_calendar.png" class="cycles-icon" style="float: left; margin: 0px 15px 15px 0px;"/>Choose a date in the future to reevaluate your choice. Your MarriageStrong app will remind you on this date to revisit your decision.</p>
             <input type="submit" value="Save and Continue" class="button button-block button-positive" />      
             </div>
             <br>
