--- a/www/templates/quizzes_usness.html
+++ b/www/templates/quizzes_usness.html
@@ -3,7 +3,7 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2><img src="img/quiz-icon-small.png" class="cycles-icon" />&nbsp;Usness Quizzes</h2>    
+        <h2><img src="img/quiz-icon-small.png" class="cycles-icon" />&nbsp;Us-ness Quizzes</h2>    
         <div class="padding">
         <p>Choose the statement that best represtents where you are today.</p>
         </div>
