--- a/www/templates/quizzes_usness_results.html
+++ b/www/templates/quizzes_usness_results.html
@@ -5,6 +5,9 @@
 	<ion-content>
        <h2><img src="img/quiz-icon-small.png" class="cycles-icon" />&nbsp;Usness Quizzes</h2>
         <h4>Usness Quiz Results</h4>
+        <div class="padding">
+            <p>As you view your scores, remember the results might put you into a place of pain. If so, use the 4 Steps to move from your pain cycle to your peace cycle.</p>
+        </div>
             <ul class="quizzes-results-list list">
                 <li class="item">
                 <div class="quizzes-circle-container"><span class="red-circle">RED</span></div>
@@ -32,9 +35,8 @@ Wow – your Us is doing great! Take some time and share with your spouse the wa
                 </li>
             </ul>
             <div class="padding">
-                <p>As you view your scores, remember the results might put you into a place of pain. If so, use the 4 Steps to move from your pain cycle to your peace cycle.</p>
                 <br>
                 <button ui-sref="menu.tabs.home" class="button button-block button-positive">Continue</button>
-            </div>
+</div>
 	</ion-content>
 </ion-view>
