--- a/www/templates/usness_activities.html
+++ b/www/templates/usness_activities.html
@@ -3,9 +3,9 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Usness Activities</h2>   
+        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Us-ness Activities</h2>   
 		<div class="padding">
-            <p>Every couple is unique. Every Us-ness has it’s own activities that connect and strengthen them. Choose from the following list all activities that make your Us-ness strong. Remember Us will do things differently than one of you would do it by yourself.</p>
+            <p>Every couple is unique. Every Us-ness has it’s own activities that connect and strengthen the couple. Choose from the following list all activities that make your Us-ness strong. Remember Us will do things differently than one of you would do it by yourself.</p>
         </div>
             <form class="usnessActivitiesForm" name="usnessActivitiesForm" novalidate="" ng-submit="process('menu.tabs.usness_activities_further',usnessActivitiesForm)">
                 <div class="padding">
