--- a/www/templates/usness_activities_further.html
+++ b/www/templates/usness_activities_further.html
@@ -3,9 +3,31 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Usness - Take it Further</h2>   
-		<div class="padding">
-            <p>TAKE IT FURTHER</p>
+        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Us-ness - Take it Further</h2>   
+		 <div class="grey_bg">
+            <div class="padding">
+                <h5>Couple Activities Results </h5>
+                <p>The following are your results you came up with for connecting the us-ness in your relationship. Take a minute to review and turn those activites into an action plan to move forward.</p>
+                <div class="list list-inset">
+                    <label class="item item-input">
+                    ###ONE
+                    </label>
+                </div>
+                <div class="list list-inset">
+                    <label class="item item-input">
+                     ###TWO
+                    </label>
+                </div>
+                <div class="list list-inset">
+                    <label class="item item-input">
+                    ###THREE
+                    </label>
+                </div>   
+                <br>
+             </div>
+        </div>
+                        <div class="padding">
+            <h1><img src="img/icon-further-small.png" class="cycles-icon" />&nbsp;TAKE IT FURTHER</h1>
             <p>
                 1. Talk with your spouse about 3 of the activities you chose for your Us; share what they mean to you and how you believe they make your Us more connected.
                 <br><br>
