--- a/www/templates/usness_gifts.html
+++ b/www/templates/usness_gifts.html
@@ -5,7 +5,8 @@
 	<ion-content>
         <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Spiritual Gifts</h2>   
 		<div class="padding">
-            <p>For couples interested in their spiritual Us-ness, you can take a spiritual gift inventory online; there are a lot available from different theological perspectives. If you are more familiar with spiritual gifts, choose your top three from the list below:</p>
+            <p>For those interested in their spiritual Us-ness, choose your top three spiritual 
+gifts from the list below. You can take a spiritual gifts test online if needed; there are a lot available from difference theological perspectives.</p>
         </div>
             <form class="usnessGiftsForm" name="usnessGiftsForm" novalidate="" ng-submit="process('menu.tabs.usness_gifts_results',usnessGiftsForm)">
                 <div class="padding">
