--- a/www/templates/usness_gifts_results.html
+++ b/www/templates/usness_gifts_results.html
@@ -17,7 +17,7 @@
                 </li>
             </ul>
             <div class="padding">
-                <p>TAKE IT FURTHER</p>
+                <h1><img src="img/icon-further-small.png" class="cycles-icon" />&nbsp;TAKE IT FURTHER</h1>
                 <p>See how you and your spouse compare in each personality category. In what ways can our similarity or difference be an advantage to our us?  
                 </p>
                 <p>Example: Two introverts in an Us can enjoy ample alone time together and not become overextended socially. With one introvert and one extrovert in the Us, the introvert keeps the couple deeply connected to others and encourages down time, while the extrovert keeps the “party animal” in your Us alive.>
