--- a/www/templates/usness_personality_results.html
+++ b/www/templates/usness_personality_results.html
@@ -14,26 +14,27 @@
             <div class="padding personalityResults">
                 <hr>
             
-                <h3>INVOLVEMENT WITH PEOPLE</h3>
+                <h3>Relating to People</h3>
                 <p>###personality.relating</p>
                 <hr>
                 <h3>HANDLES INFORMATION</h3>
                 <p>###personality.tasks</p>
                 <hr>
-                <h3>MAKES DECISIONS</h3>
+                <h3>HANDLING INFORMATION</h3>
                 <p>###personality.decisions</p>
                 <hr>
-                <h3>APPROACHES TASKS</h3>
+                <h3>ACCOMPLISHING TASKS</h3>
                 <p>###personality.learning</p>
                 <hr>
                 <br>
-                <p>TAKE IT FURTHER</p>
+                <h1><img src="img/icon-further-small.png" class="cycles-icon" />&nbsp;TAKE IT FURTHER</h1>
                 <p>See how you and your spouse compare in each personality category. In what ways can our similarity or difference be an advantage to our us?  
                 </p>
                 <p>Example: Two introverts in an Us can enjoy ample alone time together and not become overextended socially. With one introvert and one extrovert in the Us, the introvert keeps the couple deeply connected to others and encourages down time, while the extrovert keeps the “party animal” in your Us alive.>
                 </p>
                 <br>
                 <button ui-sref="menu.tabs.usness" class="button button-block button-positive">Continue</button>
+                <button href="#" class="button button-block button-calm">See Spouses Answers</button>
 
             </div>
 	</ion-content>
