--- a/www/templates/cycles_pain.html
+++ b/www/templates/cycles_pain.html
@@ -4,7 +4,7 @@
 </ion-nav-title>
 	<ion-content>
         <h2><img src="img/cycle-icon-small.png" class="cycles-icon" />&nbsp;Discover Your Pain Cycle</h2>
-        <div class="paragraph-list"><p>When I am in conflict with my spouse, I commonly feel (choose two or three):</p></div>
+        <div class="paragraph-list"><p>When I am in conflict with my spouse, I commonly feel (choose three):</p></div>
         <div class="padding">
             <form name="cyclesPainForm" novalidate="" ng-submit="process('menu.tabs.cycles_pain_copes',cyclesPainForm)">
              <ul class="cycles-pain list">
@@ -160,8 +160,14 @@
                 </li>
             </ul>
             <div class="tip-text">
-                <p>REFLECT A SEC:</p>
-                <p>When do you first remember feeling this way? These negative messages usually exist long before marriage and can come from life situations such as poverty or bullying, people outside your family such as peers or authority figures, or from your family relationships.</p>
+                <h1><img src="img/icon-reflect-small.png" class="cycles-icon" />&nbsp;REFLECT A SEC:</h1>
+                <p>When do you first remember feeling this way?  These negative messages usually exist long 
+                    before marriage and typically come from 3 places:</p>
+                <p>
+                    -life situations such as financial stress or bullying, <br>
+                    -people outside your family such as peers or authority figures, or <br> 
+                    -your family relationships. <br>
+                </p>
             </div>
             <input type="submit" value="Save and Continue" class="button button-block button-positive" />
             </form>
