--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -23,9 +23,14 @@
 				<input ng-click="fblogout()" type="button" value="Logout" class="button button-block button-dark" />
 			</form>
 		</div>
-		<div class="light text-center">
+		<div class="light text-center signup">
 			Don't have an account?<br />
 			<a href="#" ui-sref="signup">Sign Up</a>
 		</div>
+        <div class="disclaimer padding">
+            <p>
+                If you click “Log in with Facebook” and are not a MarriageStrong user, you will be registered and you agree to the MarriageStrong <a ui-sref="terms">Terms & Conditions</a> and <a ui-sref="privacy">Privacy Policy.</a>
+            </p>
+        </div>
 	</ion-content>
 </ion-view>
