--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -9,14 +9,14 @@
 		</a>
 		<img ng-if="user.User.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.User.id+'.jpg'}}" width="100%">
 		<div class="padding">
-			<a ui-sref="menu.tabs.photo" class="button button-block button-calm">Change Photo</a>
+			<a ui-sref="menu.tabs.photo" class="button button-block button-calm">Change Your Couple Photo</a>
 			<form name="profileForm" novalidate="" ng-submit="profile(profileForm)">
 				<div class="list list-inset">
-					<h5>Name</h5>{{user.User.first_name}} {{user.User.last_name}}</div>
+					<h5>Name</h5><span class="profile-name">PATRICK KEMP{{user.User.first_name}} {{user.User.last_name}}</span></div>
 				<div class="list list-inset">
 					<h5>Spouse's Name</h5>
 					<button ng-if="!user.Spouse.id" ui-sref="menu.tabs.link" class="button button-block button-calm">Link to Spouse’s Account</button>
-					{{user.Spouse.first_name}} {{user.Spouse.last_name}}
+                    <span class="profile-name">{{user.Spouse.first_name}} {{user.Spouse.last_name}}</span>
 				</div>
 				<!--Needs Validation-->
 				<div class="list list-inset">
