--- a/www/templates/usness.html
+++ b/www/templates/usness.html
@@ -3,10 +3,10 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Your Couple’s Profile</h2>   
+        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;US-NESS</h2>   
         <img src="img/usness.jpg" alt="Usness" width="100%">
 		<div class="padding">
-            <p>“Us” is the third identity that lies between a couple. It’s neither completely like the wife or the husband, but a combination of the two. The “Us” cooperates for the good of the couple as a whole and views individual differences as strengths to the relationship. </p>
+            <p>“Us” is the third identity that lies between a couple. It’s neither completely like the wife or the husband, but a combination of the two. The Us cooperates for the good of the couple as a whole and views individual differences as strengths to the relationship. </p>
             <br>
             <button ui-sref="menu.tabs.usness_activities" class="button button-block button-calm">US-NESS ACTIVITIES</button>
             <button ui-sref="menu.tabs.usness_personality" class="button button-block button-calm">PERSONALITY</button>
